cholera 0.1.8
----------------------------------------------------------------

add ability to plot "simulated" regular cases to walkingPath()


cholera 0.1.7
----------------------------------------------------------------

add orthogonal area plot to neighborhoodSnow()
add segmentViewer()
add road.segments


cholera 0.1.6
----------------------------------------------------------------

add snow.neighborhood
add snow.trimmed.segments
add neighborhoodSnow()


cholera 0.1.5
----------------------------------------------------------------

* add pump.select and neighborhood.display arguments to neighborhoodExpected()


cholera 0.1.4
----------------------------------------------------------------

* add pump.select and neighborhood.display arguments to neighborhoodObserved()
* add Adam and Eve Court to addLandmarks()


cholera 0.1.3
----------------------------------------------------------------

* add summary functions for neighborhoods


cholera 0.1.2
----------------------------------------------------------------

* rename expectedNeighborhood() to neighborhoodExpected()
* rename observedNeighborhood() to neighborhoodObserved()
* rename voronoiNeighborhood() to neighborhoodVoronoi()


cholera 0.1.1
----------------------------------------------------------------

* rename walkingNeighborhood() to expectedNeighborhood()


cholera 0.1.0
----------------------------------------------------------------

* add observedNeighborhood()
* add voronoiNeighborhood()
* add walkingNeighborhood()
* add walkingPath()
* add pump.neighborhoods vignette


cholera 0.0.0.9018
----------------------------------------------------------------

* add voronoiPlot()
* add walkingPathPlot()
* add addKernelDensity()


cholera 0.0.0.9017
----------------------------------------------------------------

* add ortho.proj, ortho.proj.sp, ortho.proj.pump, ortho.proj.pump.vestry and regular.cases datasets
* remove neighborhood data from fatalities, fatalities.unstacked and fatalities.address

